Оформление игрового поля

--- a/breakout/index.html
+++ b/breakout/index.html
@@ -9,10 +9,15 @@
 		body {
 			padding: 0;
 			margin: 0;
+			display: flex;
+			height: 100vh;
+			background-color: #543362;
 		}
 
 		canvas {
 			width: 100%;
+			max-width: 1140px;
+			margin: auto;
 		}
 	</style>
 </head>
