--- a/apple-hunter/index.html
+++ b/apple-hunter/index.html
@@ -30,6 +30,8 @@
 <body>
   <canvas id="mycanvas" width="640" height="360"></canvas>
   <script src="js/game.js" type="text/javascript"></script>
+  <script src="js/board.js" type="text/javascript"></script>
+  <script src="js/snake.js" type="text/javascript"></script>
 </body>
 
 </html>
