--- a/apple-hunter/index.html
+++ b/apple-hunter/index.html
@@ -14,7 +14,7 @@
     }
 
     canvas {
-      width: 100%;
+      height: 100%;
       position: absolute;
       top: 50%;
       left: 50%;
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-  <canvas id="mycanvas" width="640" height="360"></canvas>
+  <canvas id="mycanvas"></canvas>
   <script src="js/game.js" type="text/javascript"></script>
   <script src="js/board.js" type="text/javascript"></script>
   <script src="js/snake.js" type="text/javascript"></script>
