Start game when html source is load

--- a/apple-hunter/index.html
+++ b/apple-hunter/index.html
@@ -24,10 +24,22 @@
       -moz-transform: translate(-50%, -50%);
       -webkit-transform: translate(-50%, -50%);
     }
+
+    @font-face {
+      font-family: 'Cactus';
+      src: url('fonts/Cactus.otf');
+    }
+
+    .fontPreload {
+      font-family: 'Cactus';
+      position: absolute;
+      left: -100px;
+    }
   </style>
 </head>
 
 <body>
+  <div class="fontPreload">.</div>
   <canvas id="mycanvas"></canvas>
   <script src="js/game.js" type="text/javascript"></script>
   <script src="js/board.js" type="text/javascript"></script>
