--- a/particles/src/index.html
+++ b/particles/src/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-  <canvas id="canvas"></canvas>
+  <h1>Hello! Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci dolore, aliquid laboriosam id, eligendi
+    nulla aperiam maxime animi fugit reprehenderit ab. Sunt quo laborum deserunt adipisci itaque quidem perferendis ad.
+  </h1>
 </body>
 
 </html>
